# rpg_textuel

./: Cargo.toml  README.md  aide.txt
scenarios/: bank.xml  city.xml  gym.xml  home.xml  hospital.xml  neighborhood.xml  plage.xml  prison.xml  supermarche.xml
src/: lib.rs  main.rs
src/characters/: joueur.rs  mod.rs  personnage.rs  pnj.rs
src/dialogue/: dialogue.rs
src/events/: evenement.rs  mod.rs
src/game_engine/: mod.rs  moteur_de_jeu.rs
src/items/: inventaire.rs  mod.rs  objet.rs
src/progression/: mod.rs  progression.rs
src/scenario/: mod.rs  scenarios.rs
src/utils/: mod.rs  types_enums.rs
src/world/: gestionnaire_de_temps.rs  lieu.rs  mod.rs  monde.rs
tests/: characters_test.rs  events_test.rs  game_engine_test.rs  items_test.rs  main_test.rs  scenario_test.rs  utils_test.rs  world_test.rs
